--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 			opacity: 0.15;
 		}
 		
+		@media screen and (orientation: portrait) {
+			#bgPicDiv {
+				background-image: url('spg/bg_portrait.png');
+			}
+		}
+		
 		#introContainer {
 			width: 100%;
 			height: 100%;
