--- a/index.html
+++ b/index.html
@@ -131,6 +131,6 @@
 			src="./spg/goldenPearl.mp3" id="spgAudio"></audio>
 	</div>
 	
-	<script src="tests.js"></script>
+	<script src="tests.js?v=1"></script>
 </body>
 </html>
